# NES-Emulator

./: .gitignore  APU.h  Bus.cpp  Bus.h  CMakeLists.txt  CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  Helpers.cpp  Helpers.h  Makefile  NES.cpp  NES.h  PPU.cpp  PPU.h  README.md  UI.cpp  UI.h  chr_dump.cpp  debug.cpp  logcompare.cpp  main.cpp
.github/workflows/: c-cpp.yml
controllers/: Controller.h  StandardController.cpp  StandardController.h
include/: APU.h  Bus.h  CPU.h  Cartridge.h  IO.h  PPU.h  RomPicker.h  UI.h
include/mappers/: Mapper.h  Mapper000.h  Mapper001.h  Mapper003.h
mappers/: Mapper.cpp  Mapper.h  Mapper000.cpp  Mapper000.h  Mapper001.cpp  Mapper001.h
src/: APU.cpp  Bus.cpp  CPU.cpp  Cartridge.cpp  Helpers.cpp  IO.cpp  PPU.cpp  RomPicker.cpp
src/controllers/: StandardController.cpp
src/mappers/: Mapper.cpp  Mapper000.cpp  Mapper001.cpp  Mapper003.cpp
tests/: cputest.cpp
